# RustFiber

./: .gitignore  ARCHITECTURE.md  BENCHMARK.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  check_output.txt  error.txt  pyproject.toml  run_benchmarks.py
.github/workflows/: ci.yml  docs.yml
benches/: allocation.rs  fiber_switch.rs  latency.rs  producer_consumer.rs  sand_simulation.rs  scientific.rs  startup.rs  throughput.rs  transform.rs  work_stealing.rs
docs/: FEATUREGAPS.md  FIBER_YIELDING_PLAN.md  Feature_IntrusiveWaitList.md  Feature_raiiguard.md  GAP.md  Optimize_workstealing.md  RustJobSystem.md  best_practices.md  cachealignfinding.md  memoryfinding.md  optimize_globalsubmission_overhead.md  performance_analysis_batching.md  startup_analysis.md  strategy_reducing_allocation_overhead.md  yiedingfinding.md
openspec/changes/add-criterion-throughput-benchmark/: proposal.md  tasks.md
openspec/changes/migrate-legacy-benchmarks/: proposal.md  tasks.md
openspec/changes/reduce-parking-timeout/: design.md  proposal.md  review.md  tasks.md
openspec/changes/remove-metrics/: proposal.md  tasks.md
openspec/specs/benchmark-control/: spec.md
openspec/specs/cache_alignment/: spec.md
openspec/specs/error_handling/: spec.md
openspec/specs/fiber_configuration/: spec.md
src/: c_api.rs  check_stack.rs  context.rs  counter.rs  fiber.rs  fiber_pool.rs  iter.rs  job.rs  job_system.rs  lib.rs  main.rs  metrics.rs  tests.rs  topology.rs  tracing.rs  worker.rs
src/allocator/: linear.rs  mod.rs  paged.rs
src/benchmarks/: allocation.rs  batching_benchmark.rs  fibonacci.rs  latency.rs  main.rs  mod.rs  nas_benchmarks.rs  producer_consumer.rs  quicksort.rs  startup_latency.rs  stress.rs  throughput.rs  transform.rs  utils.rs
tests/: affinity_tests.rs  benchmark_check.rs  benchmark_detached.rs  context_tests.rs  fiber_pool_tests.rs  fiber_switch_test.rs  frame_allocator.rs  latency_test.rs  memory_allocation_edge_cases.rs  panic_safety.rs  shutdown_edge_cases.rs  test_compat_mixing.rs  test_compat_multiple.rs  test_compat_simple.rs  test_hierarchical.rs  test_particle.rs  test_producer.rs  test_recursive.rs  test_yielding.rs  tiered_spillover_tests.rs  topology_allocation.rs  work_stealing_test.rs
(+119 files in other folders)
