[package]
name = "rustfiber"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
core_affinity = "0.8"
sysinfo = "0.37.2"

[lib]
name = "rustfiber"
path = "src/lib.rs"

[[bin]]
name = "rustfiber"
path = "src/main.rs"

[[bin]]
name = "benchmarks"
path = "src/benchmarks/main.rs"
