[package]
name = "rustfiber"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
core_affinity = "0.8"
sysinfo = "0.37.2"
corosensei = { version = "0.3.2", features = ["default-stack"] }
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-utils = "0.8.21"  
rand = { version = "0.9.2", features = ["small_rng"] }

[lib]
name = "rustfiber"
path = "src/lib.rs"

[[bin]]
name = "rustfiber"
path = "src/main.rs"

[[bin]]
name = "benchmarks"
path = "src/benchmarks/main.rs"
