[package]
name = "rustfiber"
version = "0.1.3"
edition = "2024"

[features]
metrics = []
tracing = []

[dependencies]
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
core_affinity = "0.8"
sysinfo = "0.37.2"
corosensei = { version = "0.3.2", features = ["default-stack"] }
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-utils = "0.8.21"  
rand = { version = "0.9.2", features = ["small_rng"] }
thiserror = "2.0.17"
lazy_static = "1.4"

[lib]
name = "rustfiber"
path = "src/lib.rs"

[[bin]]
name = "rustfiber"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.8.1"
criterion-plot = "0.8.1"
rayon = "1.10"
num_cpus = "1.16"

[[bench]]
name = "fiber_switch"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "work_stealing"
harness = false

[[bench]]
name = "scientific"
harness = false

[[bench]]
name = "transform"
harness = false

[[bench]]
name = "producer_consumer"
harness = false

[[bench]]
name = "allocation"
harness = false

[[bench]]
name = "startup"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "sand_simulation"
harness = false
